# joyagent-jdgenie-main

./: .env  .env.example  DOCUMENT_ANALYSIS_SETUP.md  FRONTEND_STARTUP_GUIDE.md  RAW_FILE_UPLOAD_README.md  README_DOCUMENT_ANALYSIS.md  debug-chat.html  fix-startup.sh  raw-file-config.yml  setup_commands.sh  start_genie_with_documents.sh  stop_genie.sh  test-fault-tolerance.md  test_document.txt  test_integration.sh
genie-backend/: OCR_TABLE_EXTRACTION_README.md  RAW_UPLOAD_SOLUTION.md  build-and-start.sh  build-fixed.sh  deep-diagnose.sh  deploy-raw-upload.sh  diagnose-and-fix.sh  diagnose-startup-failure.sh  diagnose.sh  package-lock.json  pom.xml  raw-upload-config.yml  start-app.sh  start-backend-fixed.sh  start-correct.sh  start-simple.sh  start.sh  test-compile.sh  test-direct-start.sh  test-jar.sh  test-raw-upload.sh  test_document.txt  test_table_reconstruction.java  test_upload.txt
genie-backend/data/: geniedb.mv.db  geniedb.trace.db
genie-client/: .env  DASHSCOPE_SETUP.md  check_server.py  diagnose_api.py  diagnose_server.py  pyproject.toml  server.py  setup_fix.sh  setup_local_qwen.sh  show_config.py  simple_server.py  start_server.sh  test_api.py  test_dashscope.py  test_local_qwen.py  test_openai.py  test_server_startup.py  test_upload.sh  validate_config.py
genie-client/app/: config.py  document_analyzer.py
genie-tool/: .env_template  autobots.db
ui/: check-ui-setup.sh  icon-reference.js  index.html  quick-start.sh  start-fixed.sh  start-ui-debug.sh  start-ui-simple.sh  vite.config.ts
ui/src/components/: DocumentAnalyzer.tsx  index.ts
(+1748 files in other folders)
