[project]
name = "genie-client"
version = "0.1.0"
description = "FastAPI-based web service client for Model Context Protocol (MCP) servers with document analysis"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp==1.9.4",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    # Document processing dependencies
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",  # For Excel file support
]
